--- a/src/components/Header/Menu.css
+++ b/src/components/Header/Menu.css
@@ -3,20 +3,21 @@ a{
     text-decoration:none;
     color:inherit;
 }
-body{
-    /* background-color: #082138; */
-}
-#main-menu, #sub-menu {
+/* body{
+    background-color: #082138;
+} */
+#main-menu,
+#sub-menu {
     float: right;
     margin: 0;
     padding: 0;
     list-style-type: none;
-    font-size: 15pt;
+    font-size: 13pt;
 }
-
 
 #main-menu > li {
     float:left;
+    font-family: "NotoSansKR Bold";
     color: #395D7F;
     margin-right:30px;
 }
