--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,37 +1,17 @@
-/* 폰트 관련 되어서 오류 사항이 확인 되어서 추후에 오류 해결할 예정임. */
-/* @font-face {
-    font-family: "NotoSans Black";
-    src: url(font/NotoSansKR-Black.otf) format("truetype");
+.main-body {
+    /* border: 1px solid red; */
+    height: 300px;
+    width: 1200px;
+    margin: 0 auto;
 }
 
-@font-face {
-    font-family: "NotoSans Regular";
-    src: url(font/NotoSansKR-Regular.otf) format("truetype");
-} */
-
-body{
-    font-family: "NotoSansKR",sans-serif;
+.main-left {
+    float: left;
+    width: 60%;
 }
-
-html {
-    width: 100%;
-    height: 100%;
-    background: url('../../img/Main/bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-size: 16px;
-}
-
-.header {
-    position: fixed;
-    left: 8%;
-    top: 15%;
-}
-
-.mainLogo {
-    width: inherit;
-    max-width: 100%;
-    height: auto;
+.main-right {
+    float: left;
+    width: 39%;
 }
 
 #iconField {
@@ -45,48 +25,43 @@ html {
     width: calc(1vw + 3.5rem);
     height: calc(0.5vw + 1.5rem);
 }
-
+.logoImg {
+    width: 94%;
+    margin-top: -70px;
+    margin-left: -30px;
+}
 .SNS.facebook {
-    background-image: url('../../img/Main/facebook.png');
+    background-image: url("../../img/Main/facebook.png");
     background-size: cover;
 }
 
 .SNS.instagram {
     /* background-image: url(img/main/instagram.png); */
-    background-image: url('../../img/Main/instagram.png');
+    background-image: url("../../img/Main/instagram.png");
     background-size: cover;
 }
 
-.wrap {
-    position: fixed;
-    width: 40%;
-    left: 65%;
-    top: 25%;
-}
-
-.title>h5 {
-    /* font-family: "NotoSansKR",sans-serif; */
-    /* font-family: "NotoSansKR",sans-serif; */
-    font-size: 0.9em;
+.title > h5 {
+    font-size: 1em;
     color: #6390ca;
     margin: 0;
 }
 
-.title>h5 :not(:first-child) {
+.title > h5 :not(:first-child) {
     margin-top: 3rem;
 }
 
-.title>h1 {
-    /* font-family: "NotoSans Black", serif; */
+.title > h1 {
+    font-family: "NotoSansKR Bold", serif;
     /* font-family: "NotoSansKR",sans-serif; */
     font-weight: bolder;
     font-size: 2.3em;
-    line-height: 120%;
+    line-height: 140%;
     color: #395d7f;
     margin: 0;
 }
 
-.title>h1 :not(:first-child) {
+.title > h1 :not(:first-child) {
     margin-top: 1rem;
 }
 
@@ -96,17 +71,15 @@ html {
     color: #ff9498;
 }
 
-.aboutUs>h5 {
+.aboutUs > h5 {
     /* font-family: "NotoSans Regular", serif; */
-    font-size: 0.8em;
+    font-size: 1em;
     line-height: 200%;
     color: #6390ca;
 }
 
 .contact {
-    /* font-family: "NotoSans Regular", serif; */
-    font-size: 0.9em;
+    font-size: 1.2em;
     color: #6390ca;
-    /* 기존의 값은 14em */
-    margin-top: 10em;
+    margin-top: 5em;
 }
