--- a/src/components/Speaker/Speaker.css
+++ b/src/components/Speaker/Speaker.css
@@ -1,79 +1,53 @@
-body{
-    font-family: "NotoSansKR",sans-serif;
+.spe-body {
+    margin: 0 auto;
+    width: 1200px;
 }
-.top {
+
+/* 데놀 즐기기와 버튼 부분 */
+.spe-top {
     width: 550px;
-    margin-bottom: 80px;
+    height: 100px;
+    margin-bottom: 5%;
 }
-h1, button {
+.spe-top button {
+    margin-top: 25px;
+}
+.spe-top > .Word-title, button {
     display: inline;
 }
 
-h1 {
-    color: #FF9599;
-    font-size: 30pt;
-}
-button {
-    float: right;
-    margin-right: 20px;
-    width: 130px;
-    height:50px;
-    font-size: 18px;
-    background-color: #395D7F;
-    color: #092239;
-    border-radius: 30px;
-    border: 0px;
-    font-weight: bold;
-}
-#selected {
-    background-color: #FFFFFF;
-    color: #FF959A;
-}
-
-.content img {
+/* 콘텐츠 전부에 적용될 css */
+.spe-contents img {
+    float:left;
     width: 30%;
+    /* border: 1px solid red; */
 }
-.content h2 {
+.spe-contents h2 {
     color: #ffffff;
-    font-size: 30pt;
+    font-size: 26pt;
 }
-
-.first-content img {
-    float: left;
-}
-.first-content #text {
-    margin-left: 50%;
-}
-
-.content p {
+.spe-contents p {
     color: #6286C4;
     margin: 2px;
     font-size: 18pt;
 }
 
-.second-content {
-    margin-top: 40px;
+.spe-contents #spe-text {
+    float:left;
+    /* border: 1px solid yellow; */
 }
-.second-content img {
-    float: right;
-    /* margin-top: 40px; */
-    margin-right: 280px;
-}
-.second-content #text{
-    float: left;
-    margin-top: 110px;
+.spe-contents .left-content, .spe-contents .right-content {
+     height: 580px; /* margin 대신 간격 조절 */
 }
 
-/* .third-content {
-    margin-top:100px;
-} */
-.third-content img{
-    float: left;
-    margin-top: 150px;
-    margin-left:160px;
+
+/* 사진이 왼쪽, 글자가 오른쪽에 있는 content */
+.spe-contents .left-content #spe-text {
+    margin-left: 7%;
+    width: 62%;
 }
-.third-content #text {
-    margin-top: 150px;
-    float: right;
-    margin-bottom: 200px;
+
+/* 사진이 오른쪽, 글자가 왼쪽에 있는 content */
+.spe-contents .right-content #spe-text {
+    margin-right: 7%;
 }
