--- a/src/components/Speaker/Speaker.css
+++ b/src/components/Speaker/Speaker.css
@@ -1,58 +1,55 @@
 .spe-body {
-    margin: 0 auto;
-    width: 1200px;
+  margin: 0 auto;
+  width: 1200px;
 }
 
 /* 데놀 즐기기와 버튼 부분 */
 .spe-top {
-    width: 750px;
-    height: 100px;
-    margin-bottom: 5%;
-}
-.spe-top button {
-    margin-top: 25px;
-}
-.spe-top > .Word-title, button {
-    display: inline;
+  width: 750px;
+  height: 100px;
+  margin-bottom: 5%;
 }
 
 /* 콘텐츠 전부에 적용될 css */
+.spe-contents {
+  margin-left: 120px;
+}
 .spe-contents img {
-    float:left;
-    width: 30%;
-    /* border: 1px solid red; */
+  float: left;
+  width: 30%;
+  /* border: 1px solid red; */
 }
 .spe-contents h2 {
-    color: #ffffff;
-    font-size: 18pt;
+  color: #ffffff;
+  font-size: 18pt;
 }
 .spe-contents p {
-    color: #6286C4;
-    margin: 2px;
-    font-size: 12pt;
+  color: #6286c4;
+  margin: 2px;
+  font-size: 12pt;
 }
 
 .spe-contents #spe-text {
-    float:left;
-    /* border: 1px solid yellow; */
+  float: left;
+  /* border: 1px solid yellow; */
 }
-.spe-contents .left-content, .spe-contents .right-content {
-     height: 580px; /* margin 대신 간격 조절 */
+.spe-contents .left-content,
+.spe-contents .right-content {
+  height: 580px; /* margin 대신 간격 조절 */
 }
-
 
 /* 사진이 왼쪽, 글자가 오른쪽에 있는 content */
 .spe-contents .left-content #spe-text {
-    margin-left: 7%;
-    width: 62%;
+  margin-left: 7%;
+  width: 62%;
 }
 
 /* 사진이 오른쪽, 글자가 왼쪽에 있는 content */
 .spe-contents .right-content #spe-text {
-    margin-right: 10%;
-    margin-top: 5%;
+  margin-right: 10%;
+  margin-top: 5%;
 }
 
 .right-content #spe-text {
-    margin-left: 20%
+  margin-left: 20%;
 }
