--- a/src/components/Concept/Concept.css
+++ b/src/components/Concept/Concept.css
@@ -1,22 +1,23 @@
 .con-body {
-  width: 1300px;
+  width: 1200px;
   margin: 0 auto;
 }
 
 .con-left {
-  float:left;
-  width:45%;
+  float: left;
+  width: 45%;
   /* border: 1px solid red; */
 }
+
 .con-left img {
   width: 95%;
   padding: 30px 30px 30px 0;
 }
 
 .con-right {
-  float:left;
+  float: left;
   margin-left: 4%;
-  width:50%;
+  width: 50%;
   /* border: 1px solid yellow; */
 }
 .con-right h2 {
@@ -31,9 +32,14 @@
   font-size: 16px;
   line-height: 32px;
 }
-.con-right h5 {
+/* .con-right h5 {
   margin-left: 30px;
+} */
+.con-right > .contents1,
+.con-right > .contents2 {
+  color: #6286c4;
 }
-.con-right > .contents1, .con-right > .contents2 {
+.con-right > .contents1,
+.con-right > .contents2 {
   color: #6286c4;
 }
