--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -9,6 +9,7 @@
     float: left;
     width: 60%;
 }
+
 .main-right {
     float: left;
     width: 39%;
@@ -25,20 +26,25 @@
     width: calc(1vw + 3.5rem);
     height: calc(0.5vw + 1.5rem);
 }
+
 .logoImg {
     width: 94%;
-    margin-top: -70px;
+    margin-top: -60px;
     margin-left: -30px;
+    z-index: 0;
 }
+
 .SNS.facebook {
     background-image: url("../../img/Main/facebook.png");
     background-size: cover;
+    z-index: 100;
 }
 
 .SNS.instagram {
     /* background-image: url(img/main/instagram.png); */
     background-image: url("../../img/Main/instagram.png");
     background-size: cover;
+    z-index: 100;
 }
 
 .title > h5 {
@@ -82,4 +88,15 @@
     font-size: 1.2em;
     color: #6390ca;
     margin-top: 5em;
+}
+
+.link {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.mainDate {
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
