--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -26,19 +26,22 @@
   height: calc(0.5vw + 1.5rem);
 }
 .logoImg {
-  width: 120%;
-  margin-top: -150px;
-  margin-left: -30px;
+    width: 94%;
+    margin-top: -70px;
+    margin-left: -30px;
+    z-index: 0;
 }
 .SNS.facebook {
-  background-image: url("../../img/Main/facebook.png");
-  background-size: cover;
+    background-image: url("../../img/Main/facebook.png");
+    background-size: cover;
+    z-index: 100;
 }
 
 .SNS.instagram {
-  /* background-image: url(img/main/instagram.png); */
-  background-image: url("../../img/Main/instagram.png");
-  background-size: cover;
+    /* background-image: url(img/main/instagram.png); */
+    background-image: url("../../img/Main/instagram.png");
+    background-size: cover;
+    z-index: 100;
 }
 
 .title > h5 {
@@ -79,7 +82,13 @@
 }
 
 .contact {
-  font-size: 1.2em;
-  color: #6390ca;
-  margin-top: 5em;
+    font-size: 1.2em;
+    color: #6390ca;
+    margin-top: 5em;
+}
+
+#iconField > li > a {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
