--- a/src/components/Coc/coc.css
+++ b/src/components/Coc/coc.css
@@ -15,6 +15,7 @@
   position: absolute;
   left: 9%;
   margin-left: 100px;
+  color: white;
 }
 
 .logo {
@@ -26,7 +27,6 @@
 }
 
 .header > h1 {
-  color: white;
   font-size: 2.5em;
   margin: 0;
   line-height: 120%;
@@ -36,10 +36,13 @@ h1#upper {
   font-family: "GothicA1 Light";
 }
 
-.header > h3 {
-  margin-top: 1em;
+.lower > h3 {
+  /* margin-top: 1em; */
   color: #082138;
   font-size: 23px;
+}
+.lower {
+  margin-top: 120px;
 }
 .container {
   position: absolute;
