--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -46,17 +46,17 @@
   z-index: 100;
 }
 
-.title > h5 {
+.title>h5 {
   font-size: 1em;
   color: #6390ca;
   margin: 0;
 }
 
-.title > h5 :not(:first-child) {
+.title>h5 :not(:first-child) {
   margin-top: 3rem;
 }
 
-.title > h1 {
+.title>h1 {
   font-family: "NotoSansKR Bold", serif;
   font-weight: bolder;
   font-size: 2.3em;
@@ -65,7 +65,7 @@
   margin: 0;
 }
 
-.title > h1 :not(:first-child) {
+.title>h1 :not(:first-child) {
   margin-top: 1rem;
 }
 
@@ -75,7 +75,7 @@
   color: #ff9498;
 }
 
-.aboutUs > h5 {
+.aboutUs>h5 {
   /* font-family: "NotoSans Regular", serif; */
   font-size: 1em;
   line-height: 200%;
@@ -97,4 +97,6 @@
 .mainDate {
   margin-left: 10px;
   margin-bottom: 10px;
+  z-index: 100;
+  width: 60%;
 }
