--- a/src/components/Coc/coc.css
+++ b/src/components/Coc/coc.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-flow: row wrap;
 }
-.Word-title{
+.Word-title {
   font-family: "NotoSansKR Medium", serif;
 }
 .Word-title .coc-lower {
@@ -29,8 +29,6 @@
   position: absolute;
   display: flex;
   flex-flow: column wrap;
-  top: 25%;
-  left: 45%;
 }
 
 .section.A {
@@ -76,7 +74,6 @@
   flex-flow: row wrap;
 }
 .coc {
-  margin-left: 2em;
   color: #395d7f;
 }
 .bold {
@@ -97,4 +94,69 @@
 
 .section.E .dot > #circle {
   background-color: #ff9599;
+}
+
+#mobile_p {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.section.B #mobile_p {
+  color: #ff9599;
+}
+
+.section.C #mobile_p {
+  color: #6beeff;
+}
+
+.section.D #mobile_p {
+  color: #6286c4;
+}
+
+.section.E #mobile_p {
+  color: #ff9599;
+}
+
+@media (min-width: 576px) {
+  .container {
+    top: 25%;
+    left: 45%;
+  }
+  .coc {
+    margin-left: 2em;
+  }
+  #mobile_p {
+    display: none;
+  }
+}
+
+@media (max-width: 575px) {
+  .coc-body {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .coc-header {
+    order: 0;
+    width: 100%;
+    margin-left: 8%;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .container {
+    width: 80%;
+    display: block;
+    order: 1;
+    margin-top: 250px;
+    margin-left: 8%;
+  }
+
+  .dot {
+    display: none;
+  }
 }
